--- a/contact.html
+++ b/contact.html
@@ -1,4 +1,15 @@
 <h3>Contact</h3>
+
+
+<form class="" action="mailto:simondiscala@gmail.com" method="post" enctype="text/plain">
+  <label for="YourName">Name:</label><br>
+  <input type="text" value=""><br>
+  <label for="YourMail">email:</label><br>
+  <input type="email" value=""><br>
+  <label for="YourMessage">Your message:</label><br>
+  <textarea name="name" rows="8" cols="80"></textarea><br>
+  <input type="submit" name="send_mail">
+</form>
 <p>fictionaladress@gmail.com</p><!-- COMBAK:  -->
 <p>218 1st av New York</p>
 <p>118 218</p>
