css + basic html

--- a/index.html
+++ b/index.html
@@ -4,14 +4,15 @@
 <head>
   <meta charset="utf-8">
   <meta name="description" content="personal website to learn web development">
-  <title> ☭ Simon's personal site</title>
+  <title> Simon's personal site</title>
+  <link rel="stylesheet" href="css/styling.css">
 </head>
 
-<body>
+<body> <!--https://colorhunt.co/-->
 <table>
   <tr>
     <td>
-      <img src="Simon_profile_picture.jpg" alt="Simon profile picture">
+      <img src="images/Simon_profile_picture.jpg" alt="Simon profile picture">
     </td>
     <td>
       <strong><h1>Simon DI SCALA</h1></strong>
